<resources>
    <string name="app_name">BicycleBook</string>
    <string name="title_activity_maps">BicycleBook</string>
    <string name="start">Старт</string>
    <string name="welcome">Добро пожаловать в BicycleBook!</string>
    <string name="login_placeholder">Логин</string>
    <string name="password_placeholder">Пароль</string>
    <string name="login_btn_txt">Войти</string>
    <string name="signUp_btn_txt">Зарегистрироваться</string>
    <string name="copyright">copyright</string>
    <string name="return_btn_desc">just return button</string>
    <string name="repeat_pswrd_placeholder">Повторите пароль</string>
    <string name="register_label">Регистрация</string>
    <string name="finish">Финиш</string>
    <string name="timer_title">Времени прошло:</string>
    <string name="default_timer_value">00:00:00</string>
    <string name="myRoutesBtnText">Мои маршруты</string>
    <string name="routeName">RouteName</string>
    <string name="traveledDistance">TraveledDistance</string>
    <string name="routeTime">RouteTime</string>
    <string name="saveRouteBtnText">Сохранить маршрут</string>
    <string name="srd_routeName">Введите название маршрута:</string>
    <string name="routes_list">Список маршрутов</string>
    <string name="my_routes">Мои маршруты</string>
    <string name="map_tab">Карта</string>
    <string name="settings">Настройки</string>
    <string name="default_distance_value">0.00 км</string>
    <string name="default_routeName">Имя маршрута</string>
    <string name="auth">Авторизация</string>
    <string name="loading">Загрузка</string>
    <string name="auth_failed">Не удалось выполнить вход</string>
    <string name="download_btn">Загрузить маршруты из облака</string>
    <string name="logout">Выйти</string>
    <string name="login_switch">Вход</string>
</resources>
