<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signIn_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signIn_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/repeat_pswrd_field"
            android:layout_width="309dp"
            android:layout_height="56dp"
            android:autofillHints="username"
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/repeat_pswrd_placeholder"
            android:inputType="textWebPassword"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pswrd_field"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light"
            android:textSize="24sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.166" />

        <EditText
            android:id="@+id/login_field"
            android:layout_width="309dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:autofillHints="password"
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/login_placeholder"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/pswrd_field"
            android:layout_width="309dp"
            android:layout_height="56dp"
            android:autofillHints="username"
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/password_placeholder"
            android:inputType="textWebPassword"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_field" />

        <Button
            android:id="@+id/signUp_btn"
            android:layout_width="258dp"
            android:layout_height="43dp"
            android:background="@android:drawable/btn_default"
            android:onClick="registerNewUser"
            android:shadowColor="@color/black"
            android:text="@string/signUp_btn_txt"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeat_pswrd_field"
            app:layout_constraintVertical_bias="0.052" />

        <ImageButton
            android:id="@+id/signIn_return_btn"
            android:layout_width="36dp"
            android:layout_height="29dp"
            android:background="?attr/actionModeCloseDrawable"
            android:contentDescription="@string/return_btn_desc"
            android:onClick="returnToMaps"
            app:layout_constraintBottom_toTopOf="@+id/welcome_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.141"
            app:srcCompat="?attr/actionModeCloseDrawable" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>