<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <ImageView
        android:id="@+id/RV_image_background"
        android:layout_width="27dp"
        android:layout_height="29dp"
        android:background="#FF0000"
        android:contentDescription="routeIconBackground"
        app:layout_constraintBottom_toBottomOf="@+id/RV_image"
        app:layout_constraintEnd_toEndOf="@+id/RV_image"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="@+id/RV_image"
        app:layout_constraintTop_toTopOf="@+id/RV_image"
        app:layout_constraintVertical_bias="0.285" />

    <ImageView
        android:id="@+id/RV_image"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/ic_location"
        android:contentDescription="routeIcon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266" />

    <TextView
        android:id="@+id/RV_routeName"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:text="@string/default_routeName"
        android:textColor="#000"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RV_deleteBtn"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toEndOf="@+id/RV_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163" />

    <TextView
        android:id="@+id/RV_routeDistance"
        android:layout_width="63dp"
        android:layout_height="22dp"
        android:text="@string/default_distance_value"
        app:layout_constraintEnd_toStartOf="@+id/RV_deleteBtn"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toEndOf="@+id/RV_image"
        app:layout_constraintTop_toBottomOf="@+id/RV_routeName" />

    <TextView
        android:id="@+id/RV_routeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/default_timer_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RV_deleteBtn"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toEndOf="@+id/RV_image"
        app:layout_constraintTop_toBottomOf="@+id/RV_routeDistance"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/RV_deleteBtn"
        android:layout_width="38dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354" />

</androidx.constraintlayout.widget.ConstraintLayout>